fix alignment for rotated icons

--- a/web/src/components/Dialog/DialogModal.css
+++ b/web/src/components/Dialog/DialogModal.css
@@ -53,3 +53,8 @@
   background: black;
   opacity: 0.75;
 }
+
+.zenin__dialog_modal_close_icon {
+  display: flex;
+  transform: rotate(45deg);
+}
